add homepage in pacckage.joson

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "invoice-generator",
   "version": "0.1.0",
+  "homepage": "https://ravisingh9302.github.io/invoice_generator",
   "private": true,
   "dependencies": {
     "@preline/overlay": "^2.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
